--- a/style.css
+++ b/style.css
@@ -1,18 +1,31 @@
+:root {
+  --border-color: #333;
+  --background-color: #f8f8f8;
+  --input-color: #fff;
+  --input-text-color: #888;
+  --input-border-color: #ddd;
+  --border-bottom-color: #eee;
+  --button-hover-color: #3a3a3a;
+}
+
 /* Basic Style */
 body {
-  background-color: #f8f8f8;
-  color: #333;
+  background-color: var(--background-color);
+  color: var(--border-color);
   font-family: Lato, sans-serif;
 }
+
 .header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .header img {
   width: 100%;
 }
+
 .header .more-inf {
   font-family: fantasy, cursive;
 }
@@ -22,68 +35,79 @@ body {
     text-align: center;
   }
 }
+
 .main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
+
 .task-row-wrapper {
   display: flex;
 }
+
 ul {
   margin:0;
   padding: 0px;
 }
+
 li,
 h3 {
   list-style: none;
 }
+
 input,
 button{
   outline: none;
 }
+
 button {
   background: none;
   border: 0px;
-  color: #888;
+  color: var(--input-text-color);
   font-size: 15px;
   width: 60px;
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
+
 button:hover {
-  color: #3a3a3a;
+  color: var(--button-hover-color);
 }
+
 /* Heading */
 h3,
 label[for="new-task"] {
-  color: #333;
+  color:  color: var(--border-color);
   font-weight: 700;
   font-size: 15px;
-  border-bottom: 2px solid #333;
+  border-bottom: 2px solid color: var(--border-color);
   padding: 30px 0 10px;
   margin: 0;
   text-transform: uppercase;
 }
+
 input[type="text"] {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
   height: 21px;
   padding: 0 9px;
-  border: 1px solid #ddd;
-  background: #fff;
+  border: 1px solid var(--input-border-color);
+  background: var(--input-color);
   border-radius: 6px;
   font-family: Lato, sans-serif;
-  color: #888;
+  color: var(--input-text-color);
 }
+
 input[type="text"]:focus {
-  color: #333;
+  color:  color: var(--border-color);
 }
 
 /* New Task */
@@ -91,6 +115,7 @@ label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
+
 input#new-task {
   width: 318px;
 }
@@ -99,12 +124,13 @@ input#new-task {
 li {
   overflow: hidden;
   padding: 20px 0;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid var(--border-bottom-color);
 
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 li > * {
   vertical-align: middle;
 }
@@ -112,20 +138,24 @@ li > * {
 li > input[type="checkbox"] {
   margin: 0 10px;
 }
+
 li > label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
+
 li >    input[type="text"] {
   width: 226px;
 }
+
 button.delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
+
 button.delete img:hover {
   transform: rotateZ(0);
 }
@@ -133,7 +163,7 @@ button.delete img:hover {
 /* Completed */
 ul#completed-tasks label {
    text-decoration: line-through;
-   color: #888;
+   color: var(--input-text-color);
 }
 
 /* Edit Task */
