--- a/style.css
+++ b/style.css
@@ -8,8 +8,7 @@
   --button-hover-color: #3a3a3a;
 }
 
-/* Basic Style */
-body {
+.page {
   background-color: var(--background-color);
   color: var(--border-color);
   font-family: Lato, sans-serif;
@@ -22,11 +21,11 @@ body {
   text-align: right;
 }
 
-.header img {
+.header__img {
   width: 100%;
 }
 
-.header .more-inf {
+.header__info {
   font-family: fantasy, cursive;
 }
 
@@ -37,64 +36,37 @@ body {
 }
 
 .main {
-  display: block;
+  display: flex;
+  flex-direction: column;
   width: 500px;
   margin: 0 auto 0;
 }
 
-.task {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1;
-}
-
-.task-row-wrapper {
+.section {
   display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  width: 100%;
 }
 
-ul {
-  margin:0;
-  padding: 0px;
-}
-
-li,
-h3 {
-  list-style: none;
-}
-
-input,
-button{
-  outline: none;
-}
-
-button {
-  background: none;
-  border: 0px;
-  color: var(--input-text-color);
-  font-size: 15px;
-  width: 60px;
-  font-family: Lato, sans-serif;
-  cursor: pointer;
-}
-
-button:hover {
-  color: var(--button-hover-color);
-}
-
-/* Heading */
-h3,
-label[for="new-task"] {
-  color:  color: var(--border-color);
-  font-weight: 700;
-  font-size: 15px;
-  border-bottom: 2px solid color: var(--border-color);
+.title {
+  width: 100%;
   padding: 30px 0 10px;
-  margin: 0;
+  font-size: 15px;
   text-transform: uppercase;
+  border-bottom: 2px solid var(--border-color);
 }
 
-input[type="text"] {
-  margin: 0;
+.input-block {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  padding: 20px 0;
+}
+
+.section_add .task__input {
+  width: 100%;
   font-size: 18px;
   line-height: 18px;
   height: 21px;
@@ -106,76 +78,90 @@ input[type="text"] {
   color: var(--input-text-color);
 }
 
-input[type="text"]:focus {
-  color:  color: var(--border-color);
-}
-
-/* New Task */
-label[for="new-task"] {
-  display: block;
-  margin: 0 0 20px;
-}
-
-input#new-task {
-  width: 318px;
-}
-
-/* Task list */
-li {
-  overflow: hidden;
-  padding: 20px 0;
-  border-bottom: 1px solid var(--border-bottom-color);
-
+.task-list {
   display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 0;
+  gap: 20px;
+  margin: 0;
+}
+
+.task {
+  display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
+  padding: 20px 0;
+  overflow: hidden;
+  border-bottom: 1px solid var(--border-bottom-color);
 }
 
-li > * {
-  vertical-align: middle;
-}
-
-li > input[type="checkbox"] {
+.task__checkbox {
   margin: 0 10px;
 }
 
-li > label {
-  padding-left: 10px;
-  box-sizing: border-box;
+.task__label,
+.task__input {
+  width: 56%;
   font-size: 18px;
-  width: 226px;
+  flex-grow: 1;
 }
 
-li >    input[type="text"] {
-  width: 226px;
+.task__input {
+  margin: 0;
+  display: none;
+  font-size: 18px;
+  line-height: 18px;
+  height: 21px;
+  padding: 0 9px;
+  border: 1px solid var(--input-border-color);
+  background: var(--input-color);
+  border-radius: 6px;
+  font-family: Lato, sans-serif;
+  color: var(--input-text-color);
 }
 
-button.delete img {
+.task__input_add {
+  width: 318px;
+  display: inline-block;
+}
+
+.task_edit-mode .task__input {
+  display: inline-block;
+  width: 224px;
+}
+
+.task_edit-mode .task__label {
+  display: none;
+}
+
+.task__button {
+  background: none;
+  border: 0px;
+  font-size: 15px;
+  width: 60px;
+  font-family: Lato, sans-serif;
+  color: var(--input-text-color);
+  cursor: pointer;
+}
+
+.task__button:hover {
+  color: var(--button-hover-color);
+}
+
+.task__del-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.task__del-img:hover {
   transform: rotateZ(0);
 }
 
-/* Completed */
-ul#completed-tasks label {
-   text-decoration: line-through;
-   color: var(--input-text-color);
-}
-
-/* Edit Task */
-ul li input[type=text] {
-  display: none;
-}
-
-ul li.edit-mode input[type=text] {
-  display: inline-block;
-  width: 224px;
-}
-
-ul li.edit-mode label {
-  display: none;
+.task-list_completed .task__label {
+  text-decoration: line-through;
+  color: var(--input-text-color);
 }
